--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 	<h1>Najmul alam public website</h1>
-	<link rel="Task001" type="text/css" href="">
-	<link rel="Task002" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="Task001">
 </body>
 </html>
 
