--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 </head>
 <body>
 	<h1>Najmul alam public website</h1>
-	<link rel="stylesheet" type="text/css" href="Task001">
+	<ul>
+		<a href="Task001/index.html">Task001</a>
+		<a href="Task002/index.html">Task002</a>
+	</ul>
 </body>
 </html>
 
