--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 	<h1>Najmul alam public website</h1>
 	<ul>
-		<a href="Task001/index.html">Task001</a>
-		<a href="Task002/index.html">Task002</a>
+		<li><a href="Task001/index.html">Task001</a></li>
+		<li><a href="Task002/index.html">Task002</a></li>
 	</ul>
 </body>
 </html>
